--- a/package.json
+++ b/package.json
@@ -9,15 +9,25 @@
   },
   "dependencies": {
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "countup.js": "^2.0.4",
+    "firebase-tools": "^8.1.1",
+    "rxjs": "^6.5.5",
+    "sass-loader": "^8.0.2",
+    "vue": "^2.6.11",
+    "vue-countup-v2": "^4.0.0",
+    "vue-rx": "^6.2.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.3.0",
     "@vue/cli-plugin-eslint": "~4.3.0",
     "@vue/cli-service": "~4.3.0",
     "babel-eslint": "^10.1.0",
+    "bootstrap": "^4.3.1",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
+    "jquery": "^3.5.0",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
     "vue-template-compiler": "^2.6.11"
   },
   "eslintConfig": {
